Fixed mini menu on mobile devices

--- a/css/mini.css
+++ b/css/mini.css
@@ -76,6 +76,7 @@ header h1 {
     position: absolute;
     right: 10px;
     top: 4em;
+    z-index: 1; /*display on top of everything so images don't fuck things up*/
     width: fit-content;
     height: fit-content;
     background-color: #000;
